# nLic

./: .env.example  .gitignore  GEMINI.md  Makefile  README.md  db.md  docker-compose.test.yml  docker-compose.yml  erro_curl.md
.github/copilot-instructions.md/: idea.md  manual.md  plan.instructions.md
.github/workflows/: main.yml
backend/: Dockerfile  celerybeat-schedule  pyproject.toml
backend/app/: celery_app.py  main.py  register_user_direct.py  run_celery_worker.py  test_db.py
backend/app/api/v1/endpoints/: atas.py  contratacoes.py  contratos.py  pca.py  perfis.py
backend/app/auth/: database.py  fastapi_users.py  manager.py  schemas.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  notification.py  perfil.py  user.py
backend/app/services/: email_service.py  pncp_service.py
backend/app/utils/: filters.py
backend/app/workers/: radar_worker.py
backend/tests/: conftest.py  test_contratacoes.py  test_notifications.py  test_perfis.py  test_profiles.py  test_users.py  test_utils.py
db/: README.md  init.sql
scripts/: run_celery_beat.py  run_tests.sh  setup_env.sh  start.sh
