[tool.poetry]
name = "nradar-backend"
version = "0.1.0"
description = "Backend for nRadar, a public procurement monitoring system."
authors = ["Gemini <gemini@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
celery = "^5.4.0"
redis = "^5.0.4"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"

passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-users = "^13.0.0"
fastapi-users-db-sqlalchemy = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
